# rangestr

./: LICENSE  README.md  requirements.txt  setup.cfg  tox.ini
.github/workflows/: test.yml
rangestr/: __init__.py  _version.py  parsers.py  ranges.py
tests/: test_parsers.py  test_ranges.py  test_rangestr.py  testcases.py
