[metadata]
name = rangestr
version = attr:rangestr.__version__
author = Keyfox
author_email = dev.keyfox@gmail.com
description = A Python package for generating ranges of integers from a string.
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/keyfox/rangestr

[options]
packages = find:
python_requires = ~=3.6
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Topic :: Software Development :: Libraries :: Python Modules
